# Salamander

./: .gitignore  CMakeLists.txt  README.md  Salamander.rar  graphics-programming-2-vulkan-project-introsent.rar
include/: config.h.in
shaders/: depth.frag  depth.vert  diffuse_irradiance.frag  equirect_to_cube.frag  equirect_to_cube.vert  gbuffer.frag  gbuffer.vert  lighting.frag  lighting.vert  shader.frag  shader.vert  shadows.frag  shadows.vert  tone.frag  tone.vert
src/: application.cpp  application.h  deletion_queue.h  imgui_wrapper.cpp  imgui_wrapper.h  main.cpp  renderer.cpp  renderer.h
src/core/: context.cpp  context.h  data_structures.h  debug_messenger.cpp  debug_messenger.h  framebuffer_manager.cpp  framebuffer_manager.h  image_views.cpp  image_views.h  swap_chain.cpp  swap_chain.h  swap_chain_image_views.cpp  swap_chain_image_views.h  window.cpp  window.h
src/executors/: imgui_pass_executor.h  main_scene_pass_executor.cpp  render_pass_executor.h
src/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_vulkan.h
src/rendering/: depth_format.cpp  depth_format.h  descriptor_manager.cpp  descriptor_manager.h  descriptor_set_layout.cpp  descriptor_set_layout.h  image_transition_manager.h  pipeline.cpp  pipeline.h  pipeline_config.cpp  pipeline_config.h  render_pass.cpp  render_pass.h
src/rendering/camera/: camera.cpp  camera.h
src/rendering/descriptors/: descriptor_manager_base.h  descriptor_pool_builder.cpp  descriptor_pool_builder.h  descriptor_set_layout.cpp  descriptor_set_layout.h  descriptor_set_layout_builder.cpp  descriptor_set_layout_builder.h
src/resources/: buffer.h  buffer_manager.cpp  buffer_manager.h  command_buffer.cpp  command_buffer.h  command_manager.cpp  command_manager.h  command_pool_manager.cpp  command_pool_manager.h  ibuffer.h  index_buffer.cpp  index_buffer.h  ssbo_buffer.cpp  ssbo_buffer.h  texture_manager.cpp  texture_manager.h  uniform_buffer.cpp  uniform_buffer.h  vertex_buffer.cpp  vertex_buffer.h
src/resources/loaders/: assimp_loader.cpp  assimp_loader.h  gltf_loader.cpp  gltf_loader.h
src/shared/: scene_data.h  shared_structs.h
src/user/user_descriptor_managers/: imgui_descriptor_manager.cpp  imgui_descriptor_manager.h  main_descriptor_manager.cpp  main_descriptor_manager.h
src/user/user_executors/: dynamic_main_scene_executor.cpp  dynamic_main_scene_executor.h  imgui_pass_executor.cpp  imgui_pass_executor.h  main_scene_executor.cpp  main_scene_executor.h  main_scene_pass_executor.cpp  main_scene_pass_executor.h
src/user/user_passes/: depth_prepass.cpp  depth_prepass.h  gbuffer_pass.cpp  gbuffer_pass.h  irender_pass.h  lighting_pass.cpp  lighting_pass.h  shadow_pass.cpp  shadow_pass.h  tone_mapping_pass.cpp  tone_mapping_pass.h
src/user/user_render_targets/: cube_map_renderer.cpp  cube_map_renderer.h  depth_prepass.cpp  depth_prepass.h  gbuffer_pass.cpp  gbuffer_pass.h  imgui_target.cpp  imgui_target.h  irender_pass.h  lighting_pass.cpp  lighting_pass.h  main_scene_controller.cpp  main_scene_controller.h  main_scene_target.cpp  main_scene_target.h  tone_mapping_pass.cpp  tone_mapping_pass.h
